[package]
name = "nu_plugin_servo"
version = "0.108.1"
edition = "2024"

[features]
default = ["blitz_backend", "xml"]
blitz_backend = ["dep:blitz-dom", "dep:blitz-html"]
scraper_backend = ["dep:scraper"]
xml = ["scraper_backend"]

[dependencies]
# scraper-backend
scraper     = {version = "^0.24.0", optional = true}
# blitz-backend
blitz-dom   = {version = "^0.2.4", optional = true}
blitz-html  = {version = "^0.2.0", optional = true}

# servo
cssparser   = "^0.35.0"
html5ever   = "^0.35.0"
markup5ever = "^0.35.0"
xml5ever    = "^0.35.0"
# part of servo, but versioned differently
selectors   = "^0.32.0"
stylo       = "^0.8.0"

# nu
nu-plugin   = "0.108.0"
nu-protocol = "0.108.0"
